--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,32 +2,93 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+html {
+  overscroll-behavior: none;
 }
 
+::-webkit-scrollbar {
+  display: none;
+}
+
+html,
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  font-family: "Neue Montreal";
+  height: 100%;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+#__next {
+  height: 100%;
+}
+
+h1 {
+  font-size: 80px;
+  font-weight: 400;
+  text-transform: uppercase;
+  letter-spacing: -0.02em;
+}
+
+p {
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.5;
+  width: 50%;
+}
+
+img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.letter {
+  flex: 1;
+  font-size: 18vw;
+  font-weight: 400;
+  color: #000;
+  text-align: center;
+}
+
+.content-holder {
+  position: relative;
+  top: -5px;
+  width: 100%;
+  background: #000;
+  color: #fff;
+  padding: 1em;
+}
+
+.row {
+  margin: 2em 1em;
+}
+
+.img {
+  width: 200px;
+  height: 275px;
+}
+
+.row:nth-child(2) .img {
+  position: relative;
+  left: 50%;
+}
+
+.row:nth-child(3) .img {
+  position: relative;
+  left: 15%;
+}
+
+.row:nth-child(4) .img {
+  position: relative;
+  left: 70%;
+}
+
+.row:nth-child(6) p {
+  position: relative;
+  left: 30%;
+  margin: 4em 0;
 }
